@@ -5333,3 +5333,5 @@ v0.92.0.11:
   - Add getBlock() to TownyBuildEvent, TownyDestroyEvent and TownySwitchEvent.
   - Replace EntityDeathEvent with PlayerDeathEvent in EntityMonitorListener.
   - API: Add PlayerDeathEvent to PlayerKilledPlayerEvent.
+  - Tweaks to how players and non-protected mobs are dealt explosion damage.
+  - Cleanup Warnings courtesy of docwhomc with PR #4463.
